# cqu_jxgl

./: README.md  pyproject.toml
cqu_jxgl/: app.py  choice.py  cli.py  login.py  table.py
cqu_jxgl/data/: __init__.py  time.py
docs/: login.md  table.md
scripts/: README.md  translate_timetable.py
tests/: test_chioce.py  test_cqu_jxgl.py  工程力学.html
