[tool.poetry]
name = "cqu_jxgl"
version = "0.1.0"
description = ""
authors = ["zombie110year <zombie110year@outlook.com>"]
package = [
    {include="cqu_jxgl"}
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
icalendar = "^4.0"
beautifulsoup4 = "^4.8"
pytz = "^2019.2"
lxml = "^4.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
autopep8 = "^1.4"
pylint = "^2.3"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
cqu_schedule = "cqu_jxgl.cli:main"
